# clawd-workspace

./: .gitignore  .gitmodules  CRYPTO_LEARNING_INDEX.md  GITHUB_PUSH_SOLUTION.md  HEARTBEAT.md  IDENTITY.md  MCP_CONFIGURATION.md  MEMORY.md  OPENCLAW_COLOR_FIX.md  README-AI-TRENDING.md  TOOLS.md  USER.md  blockchain-defi-research.md  blockchain-eip-research.md  blockchain-layer0-evm-deep-dive.md  blockchain-layer0-evm-opcodes.md  blockchain-layer1-consensus.md  blockchain-layer2-application.md  blockchain-layer3-network.md  blockchain-layer4-data-layer.md  blockchain-research-plan.md  chrome-devtools-mcp-research.md  continuous_task_runner.py  continuous_task_runner_v2.py  daily-summary-2026-02-03.md  daily-summary-2026-02-04.md  daily-tasks-progress.md  daily-tasks.json  daily-tasks.md  learning-plan.md  reporting-mechanism.md  solana-polkadot-research-plan.md  task-progress.json
CarLife/: .env.example  .eslintrc.json  .gitignore  .solhint.json  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  README.md  SECURITY_IMPROVEMENT_PLAN.md  UPGRADE_ROADMAP.md  deploy.py  hardhat.config.js  package.json  requirements.txt
Pheglovog-homepage/: README.md
config/: mcporter.json
docs/: blockchain-expert-learning-plan.md  blockchain-expert-research.md  blockchain-research-summary-2026-02-03.md  defi-protocol-deep-dive.md  ethereum-core-concepts.md  fastapi-best-practices.md  fogo-research.md  (+4 more)
solana-counter/: Cargo.toml  README.md  build.sh
solana-counter/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
solana-counter/tests/: counter_test.rs
(+72 files in other folders)
