[package]
name = "solana-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.26"
solana-program-test = "1.16.24"

[dev-dependencies]
solana-program-test = "1.16.24"
solana-sdk = "1.18.26"

[lib]
name = "solana_counter"
path = "src/lib.rs"

[features]
no-entrypoint = []
test-bpf = []

[profile.release]
lto = true
codegen-units = 256

[profile.release.build-override]
opt-level = 3
